fix: username alignment of social card

--- a/app/components/SocialCard/social-card.css
+++ b/app/components/SocialCard/social-card.css
@@ -1,5 +1,5 @@
 .social-card .icon {
-  justify-content: start;
+  justify-content: start; /* override default on link */
   padding-bottom: var(--space-4);
 }
 @media (max-width: 34.375rem) {
@@ -36,4 +36,5 @@
 .social-card .username,
 .social-card .username:hover {
   color: hsl(var(--primary-200));
+  justify-content: start; /* override default on link */
 }
